# graph_crossing

./: README.md  demo.drawio  draft_slide.xopp  presentation.pptx
C++/: CMakeLists.txt  GraphProcessor.cpp
python/: .gitignore  AdaptedNXTool.py  GraphProcessor.py  Helpers.py  HeuristicAlgorithm.py  HyperparameterTools.py  IntersectAlgorithm.py  Main.py  NewSchema.py  Prompter.py  README.md  RandomizedCrossingMinimization.py  SCCdecomposition.py  SimulateAnnealingTools.py  cleanTest.py  config.txt  output.json  output.txt  output1.json  output2.json  requirements-win.txt  requirements.txt  script.py
python/Test/: HyperparameterTools.py
python/benchmarks/: testbug.json
python/benchmarks3/final_graphs/: final1.json  final10.json  final2.json  final3.json  final4.json  final5.json  final6.json  final7.json  final8.json  final9.json
python/benchmarks3/submission/: final1.json  final10.json  final2.json  final3.json  final4.json  final8.json  final9.json
python/benchmarks3/submission/verify/: final5.json  final6.json  final7.json  only_slope2.json  report.csv  verify2_only_slope.json  verify3_only_horizonal.json  verify_both.json  verify_slope_3.json
python/output/: output1.json  output2.json  output3.json  output4.json  output5.json  output6.json  report.json
python/playgrounds/: IntersectAlgorithm.py  KawaiiSpringAlgorithm.py  Playground.py  TestCase.py  cleanTest.py  deleteit.py  kawaiiPlayground.py  newtest.py  sympyPlayground.py  t1.py  test2.py
screenshots/: General_Wording_Explaination
